# klyv

./: .tarpaulin.toml  Cargo.toml  README.md  test_formatting.rs
crates/cli/: Cargo.toml
crates/cli/src/: init_logging.rs  main.rs  test.rs
crates/cli/src/fixtures/: mod.rs
crates/cli/src/snapshots/: klyv__test__aaaa_enum_file.snap  klyv__test__aaaa_struct_a_file.snap  klyv__test__aaaa_struct_b_file.snap  klyv__test__aaaaenum_file.snap  klyv__test__aaaastructa_file.snap  klyv__test__aaaastructb_file.snap  klyv__test__ab_astruct_a_file.snap  klyv__test__d2_a_mixed_content.snap  klyv__test__d2_b_global_magic.snap  klyv__test__d3_a_structs.snap  klyv__test__generated_directory_structure.snap  klyv__test__impl_method_spacing_my_enum_file.snap  (+30 more)
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/core/src/logic/: bridged.rs  file_system_node.rs  find_and_analyze.rs  mod.rs  named_source_items.rs  recursive_find_syn_items.rs
crates/core/src/models/: directory_content.rs  enum.rs  error.rs  file_system_node.rs  function.rs  identifiable.rs  implementation.rs  macro_rules.rs  mod.rs  node.rs  node_content.rs  rust_file_content.rs  source_item.rs  struct.rs  trait.rs  type.rs  union.rs  use.rs
crates/core/src/models/rust_file_content/: handle_lib_rs_special_case.rs  handle_main_rs_special_case.rs  mod.rs  rust_file_content.rs  special_case_utils.rs  utils.rs
crates/core/src/models/rust_file_content/doc/: mod.rs
crates/core/src/models/rust_file_content/utils/: convert_doc_attributes_to_comments.rs  helpers.rs  mod.rs  to_snake_case.rs
(+20 files in other folders)
