[workspace]
resolver = "3"
members = ["crates/cli", "crates/core"]

[workspace.dependencies]
# Internal dependencies
klyv-core = { path = "crates/core", version = "0.1.0" }

# External dependencies
bon = "3.6.4"
derive_more = { version = "2.0.1", features = ["full"] }
dirs-next = "2.0.0"
getset = { version = "0.1.4", default-features = false, features = [] }
indexmap = { version = "2.9.0", features = ["serde"] }
insta = { version = "1.43.1", features = ["ron", "yaml"] }
log = "0.4.27"
pretty_assertions = "1.4.1"
prettyplease = "0.2.25"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
tempfile = { version = "3.20.0" }
test-log = { version = "0.2.17" }
thiserror = "2.0.12"
